<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:id="@+id/imageBig" />
    <LinearLayout
        android:id="@+id/detail_music"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageBig"
        android:orientation="vertical">

        <TextView
            android:text="@string/nom_music"
            android:id="@+id/detail_name_music"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" />

        <TextView
            android:text="@string/nom_album"
            android:id="@+id/detail_album_music"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>

        <TextView
            android:text="@string/nom_auteur"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:id="@+id/detail_auteur_music"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail_info"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_music"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:text="@string/duree"
            android:textSize="16sp"
            android:id="@+id/detail_temps_music"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/popularite"
            android:textSize="16sp"
            android:gravity="center"
            android:id="@+id/detail_popularite_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detail_info"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">
            <RelativeLayout android:id="@+id/LaSoundCloud"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp">
                <ImageButton
                    android:id="@+id/boutonSoundCloud"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/soundcloud"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@null" />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/LaSportify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
            <ImageButton
                android:id="@+id/boutonSpotify"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/spotify"
                android:scaleType="fitCenter"
                android:padding="0dp"
                android:background="@null"
                />

        </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">
            <RelativeLayout android:id="@+id/LaDeezer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp">
                <ImageButton
                    android:id="@+id/boutonDeezer"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/deezer"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@null"
                    />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/LaYoutube"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
            <ImageButton
                android:id="@+id/boutonYoutube"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/youtube1"
                android:scaleType="fitCenter"
                android:padding="0dp"
                android:background="@null"
                />

        </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>